--- a/meshiterro/app/views/layouts/application.html.erb
+++ b/meshiterro/app/views/layouts/application.html.erb
@@ -13,6 +13,9 @@
       <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
       </li>
+      <li>
+        <%= link_to '投稿フォーム', new_post_image_path %>
+      </li>
     <% else %>
       <li>
         <%= link_to "新規登録", new_user_registration_path %>
